# UXIQ

./: .gitignore  CLAUDE.md  PATCHNOTES.md  README.md  learnings.md  package.json  spec--2026-04-15--15-30--ui-screenshot-analyzer.md
BugFixes/: 2026-04-16-hallucinated-timestamp-in-filename.md  2026-04-16-pipeline-no-worktree-learnings-applied.md  2026-04-16-worktree-hook-no-output.md  bug--2026-04-16--agents-writing-tests-with-real-api-calls.md  bug--2026-04-16--axe-cdn-no-sri-check.md  (+9 more)
ui-analyzer/: .gitignore  pyproject.toml
ui-analyzer/tests/: CLAUDE.md  conftest.py  test_apply_amendments.py  test_axe_runner.py  test_cli.py  test_config.py  test_context_events.py  test_dom_extractor.py  test_handler.py  test_image_source.py  test_page_capture.py  test_prompt_builder.py  test_prompts.py  test_report_renderer.py  test_run_writer.py  test_scorer.py  test_stderr_progress.py  test_utils.py  test_verification_parser.py  test_verifier.py  test_verify_integration.py  test_xml_parser.py
ui-analyzer/tests/fixtures/: sample_page.html
ui-analyzer/ui_analyzer/: CLAUDE.md  __init__.py  axe_runner.py  cli.py  config.py  context_events.py  dom_extractor.py  exceptions.py  handler.py  image_source.py  page_capture.py  prompt_builder.py  prompts.py  report_renderer.py  run_writer.py  scorer.py  tool_definition.py  utils.py  verification_parser.py  verifier.py  xml_parser.py
ui-analyzer/ui_analyzer/rubric/: CLAUDE.md  output_schema.py  tier1.py  tier2.py  tier3.py
ui-analyzer/ui_analyzer/rubric/tier4/: forms.py  landing_page.py  onboarding_flow.py  web_dashboard.py
(+51 files in other folders)
