[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-analyzer"
version = "0.10.1"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "playwright>=1.43.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
uxiq = "ui_analyzer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-socket>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--disable-socket"

[tool.hatch.build.targets.wheel]
include = [
    "ui_analyzer/**",
]
